+ get last version of proxy/login from PAM + rename PAm to BOS in methods names
